# test_project

./: .gitignore  Makefile  README.md  pyproject.toml
balance_calc/: __init__.py  app.py  utility.py
balance_calc/templates/: update_balance.html
instance/: db.db
